[Glitch] Fix new hashtag page's items not being full-width on mobile
Port b506ce119766bb3308f934e2d3de143b3ac6f5ad to glitch-soc

--- a/app/javascript/flavours/glitch/styles/widgets.scss
+++ b/app/javascript/flavours/glitch/styles/widgets.scss
@@ -432,11 +432,19 @@ $fluid-breakpoint: $maximum-width + 20px;
 .statuses-grid {
   min-height: 600px;
 
+  @media screen and (max-width: 640px) {
+    width: 100% !important; // Masonry layout is unnecessary at this width
+  }
+
   &__item {
     width: (960px - 20px) / 3;
 
     @media screen and (max-width: $fluid-breakpoint) {
       width: (940px - 20px) / 3;
+    }
+
+    @media screen and (max-width: 640px) {
+      width: 100%;
     }
 
     @media screen and (max-width: $no-gap-breakpoint) {
@@ -448,7 +456,7 @@ $fluid-breakpoint: $maximum-width + 20px;
     border-radius: 4px;
 
     @media screen and (max-width: $no-gap-breakpoint) {
-      border-bottom: 1px solid lighten($ui-base-color, 12%);
+      border-top: 1px solid lighten($ui-base-color, 16%);
     }
 
     &.compact {
